# Prompt-Crash-Test-Lab

./: .env.example  .gitignore  README.md  checklist.md  pyproject.toml  requirements.txt
config/: settings.py
dashboard/: app.py
data/base_prompts/: grounded_qa.jsonl  json_extraction.jsonl
data/schemas/: ecommerce.json  finance.json  job_posting.json  medical.json  restaurant.json
docs/: PromptCrashTestLab_Project_Proposal.docx  Prompt_CrashTest_Lab_Complete.tex  Prompt_CrashTest_Lab_Presentation.pptx
src/: __init__.py  adversarial.py  analysis.py  batch_runner.py  cache.py  cli.py  parameter_sensitivity.py  variant_generator.py
src/model_clients/: __init__.py  anthropic_client.py  base.py  gemini_client.py  openai_client.py  together_client.py
src/scoring/: __init__.py  answer_correctness.py  robustness.py  schema_validator.py  semantic_similarity.py
tests/: conftest.py  test_adversarial.py  test_cache.py  test_scoring.py  test_variant_generator.py
